--- a/test-output/index.html
+++ b/test-output/index.html
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods,   5 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,27 +103,12 @@
                     <div class="method-list-content passed suite-opencartSuite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-opencartSuite" title="testCases.TC_003_LoginDataDrivenTest" class="method navigator-link" hash-for-method="test_LoginDDT(laks@yahoo.com, xyz, Invalid)">test_LoginDDT(laks@yahoo.com, xyz, Invalid)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-opencartSuite" title="testCases.TC_002_LoginTest" class="method navigator-link" hash-for-method="test_Login">test_Login</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-opencartSuite" title="testCases.TC_003_LoginDataDrivenTest" class="method navigator-link" hash-for-method="test_LoginDDT(meghana123reddy98@gmail.com, test@123, Valid)">test_LoginDDT(meghana123reddy98@gmail.com, test@123, Valid)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-opencartSuite" title="testCases.TC_003_LoginDataDrivenTest" class="method navigator-link" hash-for-method="test_LoginDDT(pavanoltraining@gmail.com, test@123, Invalid)">test_LoginDDT(pavanoltraining@gmail.com, test@123, Invalid)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-opencartSuite" title="testCases.TC_003_LoginDataDrivenTest" class="method navigator-link" hash-for-method="test_LoginDDT(lakshmi@yahoo.com, Laxmi, Invalid)">test_LoginDDT(lakshmi@yahoo.com, Laxmi, Invalid)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-opencartSuite" title="testCases.TC_003_LoginDataDrivenTest" class="method navigator-link" hash-for-method="test_LoginDDT(laksh@yahoo.com, Lakshmi, Invalid)">test_LoginDDT(laksh@yahoo.com, Lakshmi, Invalid)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-opencartSuite" title="testCases.TC_001_AccountRegistrationTest" class="method navigator-link" hash-for-method="test_account_Registration">test_account_Registration</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-opencartSuite -->
@@ -141,47 +126,29 @@
           <div class="suite-opencartSuite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testCases.TC_003_LoginDataDrivenTest</span>
+              <span class="class-name">testCases.TC_002_LoginTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="test_LoginDDT(laks@yahoo.com, xyz, Invalid)">
-                  </a> <!-- test_LoginDDT(laks@yahoo.com, xyz, Invalid) -->
-                  <span class="method-name">test_LoginDDT</span>
-                  <span class="parameters">(laks@yahoo.com,xyz,Invalid)</span>
+                  <a name="test_Login">
+                  </a> <!-- test_Login -->
+                  <span class="method-name">test_Login</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-opencartSuite-class-passed -->
+          <div class="suite-opencartSuite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">testCases.TC_001_AccountRegistrationTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="test_LoginDDT(meghana123reddy98@gmail.com, test@123, Valid)">
-                  </a> <!-- test_LoginDDT(meghana123reddy98@gmail.com, test@123, Valid) -->
-                  <span class="method-name">test_LoginDDT</span>
-                  <span class="parameters">(meghana123reddy98@gmail.com,test@123,Valid)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="test_LoginDDT(pavanoltraining@gmail.com, test@123, Invalid)">
-                  </a> <!-- test_LoginDDT(pavanoltraining@gmail.com, test@123, Invalid) -->
-                  <span class="method-name">test_LoginDDT</span>
-                  <span class="parameters">(pavanoltraining@gmail.com,test@123,Invalid)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="test_LoginDDT(lakshmi@yahoo.com, Laxmi, Invalid)">
-                  </a> <!-- test_LoginDDT(lakshmi@yahoo.com, Laxmi, Invalid) -->
-                  <span class="method-name">test_LoginDDT</span>
-                  <span class="parameters">(lakshmi@yahoo.com,Laxmi,Invalid)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="test_LoginDDT(laksh@yahoo.com, Lakshmi, Invalid)">
-                  </a> <!-- test_LoginDDT(laksh@yahoo.com, Lakshmi, Invalid) -->
-                  <span class="method-name">test_LoginDDT</span>
-                  <span class="parameters">(laksh@yahoo.com,Lakshmi,Invalid)</span>
+                  <a name="test_account_Registration">
+                  </a> <!-- test_account_Registration -->
+                  <span class="method-name">test_account_Registration</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -202,7 +169,8 @@
   &lt;test thread-count=&quot;5&quot; name=&quot;OpencartTest&quot;&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testCases.TC_003_LoginDataDrivenTest&quot;/&gt;
+      &lt;class name=&quot;testCases.TC_001_AccountRegistrationTest&quot;/&gt;
+      &lt;class name=&quot;testCases.TC_002_LoginTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- OpencartTest --&gt;
 &lt;/suite&gt; &lt;!-- opencartSuite --&gt;
@@ -216,7 +184,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">OpencartTest (1 class)</span>
+                <span class="test-name">OpencartTest (2 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -242,32 +210,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'test_LoginDDT')
-data.setCell(0, 2, 'testCases.TC_003_LoginDataDrivenTest')
-data.setCell(0, 3, 11560);
+data.setCell(0, 1, 'test_account_Registration')
+data.setCell(0, 2, 'testCases.TC_001_AccountRegistrationTest')
+data.setCell(0, 3, 4587);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'test_LoginDDT')
-data.setCell(1, 2, 'testCases.TC_003_LoginDataDrivenTest')
-data.setCell(1, 3, 11196);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'test_LoginDDT')
-data.setCell(2, 2, 'testCases.TC_003_LoginDataDrivenTest')
-data.setCell(2, 3, 11129);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'test_LoginDDT')
-data.setCell(3, 2, 'testCases.TC_003_LoginDataDrivenTest')
-data.setCell(3, 3, 11089);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'test_LoginDDT')
-data.setCell(4, 2, 'testCases.TC_003_LoginDataDrivenTest')
-data.setCell(4, 3, 1754);
+data.setCell(1, 1, 'test_Login')
+data.setCell(1, 2, 'testCases.TC_002_LoginTest')
+data.setCell(1, 3, 1629);
 window.suiteTableData['opencartSuite']= { tableData: data, tableDiv: 'times-div-opencartSuite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 46 seconds</span>
+              <span class="suite-total-time">Total running time: 6 seconds</span>
               <div id="times-div-opencartSuite">
               </div> <!-- times-div-opencartSuite -->
             </div> <!-- times-div -->
@@ -293,34 +249,33 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testCases.TC_003_LoginDataDrivenTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testCases.TC_001_AccountRegistrationTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setup(chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">test_LoginDDT(pavanoltraining@gmail.com, test@123, Invalid)</span>
-                <span class="method-start">6520 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">test_LoginDDT(lakshmi@yahoo.com, Laxmi, Invalid)</span>
-                <span class="method-start">18104 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">test_LoginDDT(laksh@yahoo.com, Lakshmi, Invalid)</span>
-                <span class="method-start">29302 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">test_LoginDDT(laks@yahoo.com, xyz, Invalid)</span>
-                <span class="method-start">40395 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">test_LoginDDT(meghana123reddy98@gmail.com, test@123, Valid)</span>
-                <span class="method-start">51528 ms</span>
+                <span class="method-name">test_account_Registration</span>
+                <span class="method-start">9540 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">53287 ms</span>
+                <span class="method-start">14147 ms</span>
+              </div> <!-- configuration-class after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">testCases.TC_002_LoginTest</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
+                <span class="method-name">setup(chrome)</span>
+                <span class="method-start">14302 ms</span>
+              </div> <!-- configuration-class before -->
+              <div class="test-method">
+                <span class="method-name">test_Login</span>
+                <span class="method-start">16527 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-class after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">18159 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
